--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
+:root {
+  --primary: #34252f;
+  --secondary: #A4B494;
+  --secondary:#7b866f;
+  --tertiary: #BEC5AD;
+  /* --light: #fafafa;
+  --dark: #000000;
+  --darker: #111111; */
+  --error: rgb(228, 46, 1);
+  
+
+}
+
+
+/* Navbar things */
+.
+a {
+  color: var(--tertiary);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +31,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
