Footer has branded colors for icons and background. Footer also opens new tab when icon is clicked.

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -37,3 +37,15 @@ nav.navbar {
     text-indent: 2em;
   }
   
+  // Footer section
+  #footer{
+    background-color: #bec5ad;
+    padding-top: 1rem;
+  }
+
+  a {
+    color: #5b6452;
+  }
+  a:hover {
+    color: #38412f;
+  }
