added titles to portfolio cards and appear on hover effect

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -87,3 +87,11 @@ nav.navbar {
  border-radius: 25px;
 
  }
+
+.card-img-overlay{
+  display: none;
+}
+
+.card:hover .card-img-overlay{
+  display: block;
+}
