--- a/src/custom.scss
+++ b/src/custom.scss
@@ -95,3 +95,55 @@ nav.navbar {
 .card:hover .card-img-overlay{
   display: block;
 }
+
+// Contact Form
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  
+}
+
+#contact-form {
+  min-width: 100%;
+  height: 100vh;
+  margin: 0vw;
+  padding: 5vw;
+  position: relative;
+  margin-left: 9vw;
+}
+
+#contact-form h4{
+   font-size: 35px;
+   text-align: center;
+   color: #5b6452;
+}
+
+#contact-form label{
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  margin: 0 0 2vh 0;
+}
+
+#contact-form input, textarea{
+  display: block;
+  width: 100%;
+  padding: 0.5rem 0.8rem 0.5rem 0.8rem;
+  margin: 0.9vw 0;
+  border: 0;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+#contact-form Button{
+  background-color:#5b6452;
+  width: 100%;
+}
+// #form-box textarea{
+//   height: 15vh;
+// }
+
+#contact-form Button:hover {
+  background-color: #38412f;
+}
