Has a link to a downloadable resume and a list of the developer’s proficiencies

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -159,3 +159,25 @@ nav.navbar {
 h4{
   margin-bottom: 4vw;
 }
+// Resume section
+#resumeHeaders{
+  padding-left: 0;
+}
+
+#projectTitles{
+  font-weight: bold;
+  text-indent: 0;
+  margin-bottom: 0;
+}
+
+#techSkills{
+  word-spacing: 1rem;
+  margin-bottom: 0;
+  text-indent: 0;
+}
+
+#techSkillsYrs{
+  word-spacing: 2rem;
+  text-indent: 0;
+  
+}
